--- a/frontend/src/components/CasesDataTable/index.css
+++ b/frontend/src/components/CasesDataTable/index.css
@@ -1,31 +1,3 @@
-.table--container {
-   overflow-x: auto;
-}
-
-.table--wrapper {
-   width: fit-content;
-}
-
-.table--header {
+thead {
    background-color: rgba(0,0,0,0.1);
-}
-
-.table--row {
-   display: flex;
-   gap: 10px;
-   padding: 8px 16px;
-}
-
-.table--col {
-   width: 100px;
-   overflow-x: auto;
-}
-
-.table--col::-webkit-scrollbar {
-   height: 4px;
-}
-
-.table--col::-webkit-scrollbar-thumb {
-   background-color: rgba(0,0,0,0.4);
-   border-radius: 10px;
 }
