feat: pages layout and navigation and sort by case number

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,24 @@
 html {
    padding: 0;
 }
+
+
+/* PAGES LAYOUT */
+.header--section {
+   padding: 10px;
+}
+
+.main--section {
+   display: flex;
+}
+
+.sidebar {
+   width: 180px;
+   min-height: 100vh;
+   background-color: rgba(0,0,0,0.1);
+}
+
+.sidebar nav {
+   display: flex;
+   flex-direction: column;
+}
