feat: added Calendar and fixed overview page layout

--- a/frontend/src/components/CasesDataTable/index.css
+++ b/frontend/src/components/CasesDataTable/index.css
@@ -1,3 +1,49 @@
-thead {
-   background-color: rgba(0,0,0,0.1);
+.table-wrapper {
+   height: calc(100% - 50px); 
+   overflow-y: scroll;
+   background-color: white;
+   padding: 0 5px 5px 5px;
+   border-radius: 10px;
+   box-shadow: inset 3px 3px 6px rgba(146, 146, 146, 0.25);
+   position: relative;
+}
+
+.table-wrapper table {
+   margin-top: 5px;
+}
+
+th, td {
+   text-align: left;
+   padding: 10px;
+}
+
+th {
+   position: sticky;
+   top: 0;
+   background-color: white;
+   box-shadow: 0 2px 2px rgba(146, 146, 146, 0.2);
+}
+
+th:hover {
+   cursor: pointer;
+   background-color: #F1F5FB;
+}
+
+.table_case {
+   width: 10%;
+}
+.table_name {
+   width: 15%;
+}
+.table_description {
+   width: 35%;
+}
+.table_deadline {
+   width: 10%;
+}
+.table_email {
+   width: 20%;
+}
+.table_phone {
+   width: 10%;
 }
