fix: ui layout adjustments and code refactor

--- a/frontend/src/components/CasesDataTable/index.css
+++ b/frontend/src/components/CasesDataTable/index.css
@@ -47,3 +47,10 @@ th:hover {
 .table_phone {
    width: 10%;
 }
+
+.table_name_data {
+   text-decoration: none;
+}
+.table_name_data:hover {
+   text-decoration: underline;
+}
