--- a/frontend/src/components/Sidebar/index.css
+++ b/frontend/src/components/Sidebar/index.css
@@ -1,13 +1,13 @@
 .sidebar {
    width: 180px;
-   min-height: 100vh;
+   height: 100vh;
    background-color: rgba(200,200,200,1);
    box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
    z-index: 2;
 }
 
 .sidebar_tools {
-   margin: 10px 0;
+   padding: 10px 0;
 }
 
 .sidebar_tools_exit {
