--- a/family-law/src/app/globals.css
+++ b/family-law/src/app/globals.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+*,
+::before,
+*::after {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +31,4 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
